# nixclip

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.claude/skills/nixbuild/: SKILL.md
.docker/: dev.Dockerfile
nix/: desktop-entry.desktop  e2e-smoke.sh  hm-module.nix  module.nix
nixclip/: Cargo.toml
nixclip-cli/: Cargo.toml
nixclip-cli/src/: ipc_client.rs  main.rs
nixclip-cli/src/commands/: clear.rs  config_cmd.rs  delete.rs  doctor.rs  list.rs  mod.rs  paste.rs  pin.rs  search.rs  show.rs  stats.rs
nixclip-core/: Cargo.toml
nixclip-core/src/: config.rs  error.rs  ipc.rs  lib.rs  search.rs
nixclip-core/src/pipeline/: classifier.rs  mod.rs  privacy.rs  processor.rs
nixclip-core/src/storage/: blob.rs  clip_store.rs  migrations.rs  mod.rs  schema.rs
nixclip-core/tests/: bug_regression_test.rs  config_test.rs  ipc_deep_test.rs  ipc_test.rs  pipeline_deep_test.rs  pipeline_test.rs  search_deep_test.rs  search_test.rs  spec_compliance_test.rs  storage_deep_test.rs  storage_test.rs
nixclip/src/: app.rs  ipc_client.rs  main.rs  settings.rs  window.rs
nixclip/src/widgets/: entry_row.rs  filter_tabs.rs  footer.rs  mod.rs  search_bar.rs
nixclipd/: Cargo.toml
nixclipd/src/: hotkey.rs  ipc_server.rs  main.rs  pruning.rs  screen_lock.rs  watcher.rs
