[workspace]
members = ["nixclip-core", "nixclipd", "nixclip", "nixclip-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
rmp-serde = "1"
chrono = { version = "0.4", features = ["serde"] }
