[package]
name = "nixclip-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rmp-serde = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
blake3 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
dirs = "5"
nucleo-matcher = "0.2"

[dev-dependencies]
tempfile = "3"
