[package]
name = "nixclip"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nixclip-ui"
path = "src/main.rs"

[dependencies]
nixclip-core = { path = "../nixclip-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_4"] }
